--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -1,6 +1,8 @@
 @import 'abstracts/mixins';
 @import 'abstracts/variables';
 
+@import 'components/button';
+
 @import 'layouts/landinghome';
 @import 'layouts/about';
 @import 'layouts/contact';
