--- a/src/assets/scss/abstracts/_mixins.scss
+++ b/src/assets/scss/abstracts/_mixins.scss
@@ -13,7 +13,7 @@
 }
 
 @mixin font {
-  font-family: 'Sarala';
+  font-family: 'Sarala', sans-serif;
   font-style: normal;
   //line-height: 245px;
 }
