--- a/src/assets/scss/abstracts/_variables.scss
+++ b/src/assets/scss/abstracts/_variables.scss
@@ -8,6 +8,8 @@ $color-secondary: #a6ad97;
 
 $color-white: #ffffff;
 
+$color-light: #fbfcff;
+
 $background-light: #fbfcff;
 $background-dark: #444444;
 
