--- a/src/assets/scss/components/_button.scss
+++ b/src/assets/scss/components/_button.scss
@@ -1,12 +1,12 @@
 .button {
-    @include font;
-    margin-top: 1rem;
-    padding: .5rem 2rem .5rem 2rem;
-    background-color: $background-light;
-    border: 1px solid $color-primary;
-    border-radius: 3px;
-    text-align: center;
-    letter-spacing: 0.12em;
-    color: $color-primary;
-    cursor: pointer;
+  @include font;
+  margin-top: 1rem;
+  padding: 0.5rem 2rem 0.5rem 2rem;
+  background-color: $background-light;
+  border: 1px solid $color-primary;
+  border-radius: 3px;
+  text-align: center;
+  letter-spacing: 0.12em;
+  color: $color-primary;
+  cursor: pointer;
 }
