--- a/src/assets/scss/pages/_portfolio.scss
+++ b/src/assets/scss/pages/_portfolio.scss
@@ -21,18 +21,17 @@
 
 .content {
   &__landing {
-    @include section;
-    background-color: $background-light;
-  }
-
-  &__about {
-    @include section;
-    height: 30%;
-    background-color: $background-dark;
-  }
-
-  &__contact {
-    @include section;
+    -webkit-box-pack: center;
+    justify-content: center;
+    -webkit-box-align: center;
+    display: flex;
+    position: relative;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    height: 100vh;
+    height: calc(var(--vh, 1vh) * 100);
+    overflow: hidden !important;
     background-color: $background-light;
   }
 }
