--- a/src/assets/scss/base/_base.scss
+++ b/src/assets/scss/base/_base.scss
@@ -27,7 +27,9 @@ body {
   min-height: 100vh;
 }
 
-a {
+a, a:hover, a:focus, a:active {
+  color: inherit;
+  text-decoration: none;
   cursor: pointer;
 }
 
