--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -2,6 +2,8 @@
 @import 'abstracts/variables';
 
 @import 'components/button';
+@import 'components/person';
+@import 'components/social';
 
 @import 'layouts/landinghome';
 @import 'layouts/about';
