--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -8,6 +8,7 @@
 @import 'layouts/landinghome';
 @import 'layouts/about';
 @import 'layouts/contact';
+@import 'layouts/copyright';
 
 @import 'pages/portfolio';
 
