Add technologies css

--- a/src/assets/scss/abstracts/_variables.scss
+++ b/src/assets/scss/abstracts/_variables.scss
@@ -18,6 +18,7 @@ $background-dark: #444444;
 $font-primary: 'Open Sans', sans-serif;
 $font-color: #444444;
 $font-color-secondary: #fc9685;
+$font-color-dark: #a95649;
 $font-color-white: #ffffff;
 
 // =================================
