--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -4,9 +4,11 @@
 @import 'components/button';
 @import 'components/person';
 @import 'components/social';
+@import 'components/technology';
 
 @import 'layouts/landinghome';
 @import 'layouts/about';
+@import 'layouts/technologies';
 @import 'layouts/contact';
 @import 'layouts/copyright';
 
