--- a/src/assets/scss/components/_technology.scss
+++ b/src/assets/scss/components/_technology.scss
@@ -3,6 +3,9 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    text-align: center;
+    padding: 3rem 5rem;
+
     &--subtitle {
       @include font;
       font-size: 2rem;
