--- a/src/assets/scss/layouts/_technologies.scss
+++ b/src/assets/scss/layouts/_technologies.scss
@@ -1,7 +1,4 @@
 .technologies {
-  display: flex;
-  justify-content: center;
-  flex-flow: row;
   width: 100%;
   height: 80vh;
   height: calc(var(--vh, 1vh) * 80);
@@ -13,10 +10,15 @@
     h1 {
       @include font;
       color: $font-color;
-      font-style: normal;
-      font-weight: bold;
       font-size: 3rem;
       letter-spacing: 0.12em;
+      text-transform: uppercase;
     }
+  }
+
+  &__box{
+    display: flex;
+    flex-flow: row;
+    padding: 3rem 0rem;
   }
 }
