Add github graphic

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -3,6 +3,7 @@
 
 @import 'components/button';
 @import 'components/person';
+@import 'components/graphic';
 @import 'components/social';
 
 @import 'layouts/landinghome';
