--- a/src/assets/scss/layouts/_about.scss
+++ b/src/assets/scss/layouts/_about.scss
@@ -3,8 +3,7 @@
   justify-content: center;
   flex-flow: column;
   width: 100%;
-  height: 80vh;
-  height: calc(var(--vh, 1vh) * 80);
+  height: 100%;
   overflow: hidden !important;
   background-color: $background-dark;
   padding: 3rem 8rem;
