--- a/src/assets/scss/layouts/_copyright.scss
+++ b/src/assets/scss/layouts/_copyright.scss
@@ -1,6 +1,8 @@
-.copyright{
-    @include font;
-    font-size: 1rem;
-    color: $color-primary;
-    text-align: center;
+.copyright {
+  @include font;
+  font-size: 1rem;
+  color: $color-primary;
+  text-align: center;
+  background-color: $background-dark;
+  padding: 1rem 0;
 }
