--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -5,9 +5,11 @@
 @import 'components/person';
 @import 'components/graphic';
 @import 'components/social';
+@import 'components/technology';
 
 @import 'layouts/landinghome';
 @import 'layouts/about';
+@import 'layouts/technologies';
 @import 'layouts/contact';
 @import 'layouts/copyright';
 
