--- a/src/assets/scss/components/_technology.scss
+++ b/src/assets/scss/components/_technology.scss
@@ -4,18 +4,20 @@
     flex-direction: column;
     align-items: center;
     text-align: center;
-    padding: 3rem 5rem;
+    padding: 1rem;
 
     &--subtitle {
       @include font;
       font-size: 2rem;
       color: $font-color;
     }
+
     &--description {
       @include font;
       font-size: 1rem;
       color: $font-color;
     }
+
     &--icon {
       color: $font-color-dark;
       padding: 3rem 1rem;
