Responsivity for mobile S and M

--- a/src/assets/scss/components/_person.scss
+++ b/src/assets/scss/components/_person.scss
@@ -4,6 +4,10 @@
     flex-direction: row;
     align-items: center;
 
+    @media only screen and (max-width: $breakpoint-smallest) {
+      padding: 3rem 1rem;
+    }
+
     &--title {
       @include font;
       font-size: 3rem;
@@ -22,6 +26,10 @@
       @media only screen and (max-width: $breakpoint-medium) {
         font-size: 1rem;
       }
+
+      @media only screen and (max-width: $breakpoint-smallest) {
+        font-size: 0.8rem;
+      }
     }
 
     &--description {
@@ -32,6 +40,10 @@
       @media only screen and (max-width: $breakpoint-medium) {
         font-size: 0.5rem;
       }
+
+      @media only screen and (max-width: $breakpoint-smallest) {
+        font-size: 0.6rem;
+      }
     }
 
     &--image {
@@ -40,6 +52,11 @@
       @media only screen and (max-width: $breakpoint-medium) {
         height: 120px;
         width: 130px;
+      }
+
+      @media only screen and (max-width: $breakpoint-smallest) {
+        height: 100px;
+        width: 110px;
       }
     }
   }
@@ -68,6 +85,10 @@
       @media only screen and (max-width: $breakpoint-medium) {
         font-size: 1rem;
       }
+
+      @media only screen and (max-width: $breakpoint-smallest) {
+        font-size: 0.6rem;
+      }
     }
 
     &--image {
@@ -77,6 +98,11 @@
       @media only screen and (max-width: $breakpoint-medium) {
         height: 120px;
         width: 130px;
+      }
+
+      @media only screen and (max-width: $breakpoint-smallest) {
+        height: 100px;
+        width: 110px;
       }
     }
 
