--- a/src/assets/scss/components/_button.scss
+++ b/src/assets/scss/components/_button.scss
@@ -14,4 +14,9 @@
     font-size: 1.3rem;
     padding: 0.3rem 1rem;
   }
+
+  @media only screen and (max-width: $breakpoint-smallest) {
+    font-size: 1em;
+    padding: 0.1rem 0.7rem;
+  }
 }
