Improve contact design

--- a/src/assets/scss/abstracts/_variables.scss
+++ b/src/assets/scss/abstracts/_variables.scss
@@ -19,6 +19,7 @@ $font-primary: 'Open Sans', sans-serif;
 $font-color: #444444;
 $font-color-secondary: #fc9685;
 $font-color-dark: #a95649;
+$font-color-light: #fbfcff;
 $font-color-white: #ffffff;
 
 // =================================
