--- a/src/assets/scss/layouts/_copyright.scss
+++ b/src/assets/scss/layouts/_copyright.scss
@@ -3,6 +3,6 @@
   font-size: 1rem;
   color: $color-primary;
   text-align: center;
-  background-color: $background-dark;
+  background-color: $background-light;
   padding: 1rem 0;
 }
