--- a/src/assets/scss/layouts/_technologies.scss
+++ b/src/assets/scss/layouts/_technologies.scss
@@ -1,10 +1,17 @@
 .technologies {
+  -webkit-box-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
   width: 100%;
-  height: 80vh;
-  height: calc(var(--vh, 1vh) * 80);
+  height: 60vh;
+  height: calc(var(--vh, 1vh) * 60);
   overflow: hidden !important;
   background-color: $background-light;
   padding: 3rem 10rem;
+  display: flex;
+  position: relative;
+  flex-direction: column;
+  align-items: center;
 
   @media only screen and (max-width: $breakpoint-medium) {
     height: 100%;
