Improve code and Add choco donuts

--- a/src/assets/scss/components/_button.scss
+++ b/src/assets/scss/components/_button.scss
@@ -19,4 +19,12 @@
     font-size: 1em;
     padding: 0.1rem 0.7rem;
   }
+
+  &--details {
+    &:hover,
+    &:active,
+    &:focus {
+      color: $color-primary-light;
+    }
+  }
 }
