--- a/src/assets/scss/components/_graphic.scss
+++ b/src/assets/scss/components/_graphic.scss
@@ -12,7 +12,17 @@
   &--margin {
     margin-bottom: 2rem;
 
+    @media only screen and (max-width: $breakpoint-large) {
+      height: 120px;
+      width: 600px;
+    }
+
     @media only screen and (max-width: $breakpoint-medium) {
+      height: 100px;
+      width: 450px;
+    }
+
+    @media only screen and (max-width: $breakpoint-small) {
       height: 70px;
       width: 300px;
     }
