--- a/src/assets/scss/layouts/_landinghome.scss
+++ b/src/assets/scss/layouts/_landinghome.scss
@@ -44,7 +44,7 @@
     font-weight: bold;
     font-size: 2.9rem;
     letter-spacing: 0.03em;
-    margin-top: 4rem;
+    margin: 4rem 0 1.5rem 0;
 
     @media only screen and (max-width: $breakpoint-medium) {
       font-size: 2rem;
