Improve SASS mixins style

--- a/src/assets/scss/abstracts/_variables.scss
+++ b/src/assets/scss/abstracts/_variables.scss
@@ -12,10 +12,12 @@ $color-light: #fbfcff;
 
 $background-light: #fbfcff;
 $background-dark: #444444;
+$background-primary-dark: #a95649;
+$background-primary-dark-opacity: #a9564942;
 
 // =================================
 // FONT VARIABLES
-$font-primary: 'Open Sans', sans-serif;
+$font-primary: 'Sarala', sans-serif;
 $font-color: #444444;
 $font-color-secondary: #fc9685;
 $font-color-dark: #a95649;
