--- a/src/assets/scss/components/_button.scss
+++ b/src/assets/scss/components/_button.scss
@@ -8,6 +8,8 @@
   text-align: center;
   letter-spacing: 0.12em;
   color: $color-primary;
+  font-size: 1.5rem;
+
   cursor: pointer;
 
   @media only screen and (max-width: $breakpoint-medium) {
