--- a/src/assets/scss/abstracts/_mixins.scss
+++ b/src/assets/scss/abstracts/_mixins.scss
@@ -1,10 +1,16 @@
-@mixin font {
-  font-family: 'Sarala', sans-serif;
-  font-style: normal;
-  //line-height: 245px;
+@mixin display {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  overflow: hidden !important;
 }
 
-@mixin arrowToTop {
+@mixin font {
+  font-family: $font-primary;
+  font-style: normal;
+}
+
+@mixin arrow-to-top {
   opacity: 0.3;
   position: fixed;
   bottom: 5%;
@@ -12,4 +18,13 @@
   margin: 0;
   padding: 0px 3px;
   color: $color-secondary;
+}
+
+@mixin input {
+  @include font;
+  padding: 0.5rem 1rem;
+  background-color: $background-primary-dark-opacity;
+  color: $color-light;
+  border: 1px solid $color-primary-dark;
+  border-radius: 3px;
 }
