--- a/src/assets/scss/layouts/_about.scss
+++ b/src/assets/scss/layouts/_about.scss
@@ -1,10 +1,7 @@
 .about {
-  display: flex;
-  justify-content: center;
+  @include display;
   flex-flow: column;
-  width: 100%;
   height: 100%;
-  overflow: hidden !important;
   background-color: $background-dark;
   padding: 3rem 8rem;
 
