--- a/src/assets/scss/layouts/_contact.scss
+++ b/src/assets/scss/layouts/_contact.scss
@@ -65,7 +65,14 @@
         letter-spacing: 0.12em;
         color: $color-light;
         display: inline;
+        font-size: 1.4rem;
         cursor: pointer;
+
+        &:hover,
+        &:focus,
+        &:active {
+          color: $color-primary-light;
+        }
 
         @media only screen and (max-width: $breakpoint-medium) {
           font-size: 1.3rem;
