--- a/src/assets/scss/pages/_portfolio.scss
+++ b/src/assets/scss/pages/_portfolio.scss
@@ -48,7 +48,7 @@
   }
 
   &--icon {
-    @media only screen and (max-width: $breakpoint-smallest) {
+    @media only screen and (max-width: $breakpoint-smally) {
       height: 30px;
     }
   }
