--- a/src/assets/scss/abstracts/_variables.scss
+++ b/src/assets/scss/abstracts/_variables.scss
@@ -30,4 +30,5 @@ $breakpoint-largest: 90em; // 1440px     /16 =75
 $breakpoint-large: 75em; // 1200px     /16 =68.75
 $breakpoint-medium: 56.25em; // 900px      /16 =56.25
 $breakpoint-small: 37.5em; // 600px      /16 =37.5
-$breakpoint-smallest: 31.25em; // 500px      /16 =31.25
+$breakpoint-smally: 31.25em; // 500px      /16 =31.25
+$breakpoint-smallest: 25em; // 400px      /16 =25
