--- a/src/assets/scss/components/_button.scss
+++ b/src/assets/scss/components/_button.scss
@@ -17,12 +17,16 @@
     padding: 0.3rem 1rem;
   }
 
-  @media only screen and (max-width: $breakpoint-smallest) {
-    font-size: 1em;
+  @media only screen and (max-width: $breakpoint-smally) {
+    font-size: 1rem;
     padding: 0.1rem 0.7rem;
   }
 
-  &--details {
+  @media only screen and (max-width: $breakpoint-smallest) {
+    font-size: 0.2rem;
+  }
+
+  &--contact {
     &:hover,
     &:active,
     &:focus {
