--- a/src/assets/scss/layouts/_contact.scss
+++ b/src/assets/scss/layouts/_contact.scss
@@ -18,7 +18,7 @@
     text-align: center;
     padding-bottom: 3rem;
 
-    @media only screen and (max-width: $breakpoint-smallest) {
+    @media only screen and (max-width: $breakpoint-smally) {
       font-size: 2.5rem;
     }
   }
@@ -27,6 +27,11 @@
     display: flex;
     flex-direction: column;
     padding: 0 1.5rem;
+
+    @media only screen and (max-width: $breakpoint-smally) {
+      width: 50%;
+      margin: 0 auto;
+    }
 
     &__label {
       @include font;
@@ -79,7 +84,7 @@
           padding: 0.3rem 1rem;
         }
 
-        @media only screen and (max-width: $breakpoint-smallest) {
+        @media only screen and (max-width: $breakpoint-smally) {
           font-size: 1em;
           padding: 0.5rem 0.7rem;
         }
